# boxer_melodic

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/openslam_gmapping/: autoptr_test  configfile_test  gfs2log  gfs2neff  gfs2rec  icptest  log_plot  log_test  rdk2carmen  scanmatch_test  scanstudio2carmen
devel/lib/pkgconfig/: gmapping.pc  openslam_gmapping.pc
devel/share/gmapping/cmake/: gmappingConfig.cmake
devel/share/openslam_gmapping/cmake/: openslam_gmappingConfig.cmake
maps/: maze.pgm  maze.yaml
scripts/: boxer_init.sh
src/boxer_base/: package.xml
src/boxer_base/cmake/: boxer_baseConfig.cmake
src/boxer_base/config/cameras/: left_trigger.yaml  right_trigger.yaml
src/boxer_bringup/: package.xml
src/boxer_bringup/cmake/: boxer_bringupConfig.cmake
src/boxer_description/cmake/: boxer_descriptionConfig.cmake
src/boxer_desktop/: package.xml
src/boxer_firmware/: bootloader.elf  mcu-lspcu  mcu-tdcu
src/boxer_firmware/cmake/: boxer_firmwareConfig.cmake
src/boxer_gazebo/cmake/: boxer_gazeboConfig.cmake
src/boxer_msgs/cmake/: boxer_msgsConfig.cmake
src/boxer_navigation/cmake/: boxer_navigationConfig.cmake
src/boxer_robot/: package.xml
src/boxer_visual/cmake/: boxer_visualConfig.cmake
src/boxer_viz/cmake/: boxer_vizConfig.cmake
