<?xml version="1.0"?>
<package format="2">
  <name>boxer_desktop</name>
  <version>0.0.1</version>
  <description>Packages for working with BOXER from a ROS desktop.</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/boxer_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>boxer_msgs</exec_depend>
  <exec_depend>boxer_viz</exec_depend>

  <export><metapackage/></export>
</package>
